Fixed the overflow on the homepage,

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -35,6 +35,10 @@ h4 {
 	margin-top: 35px !important;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .pink-font {
 	color: #DF0070;
 }
